@@ -2507,7 +2507,7 @@ AiDescription=AI (Artificial Intelligence) features
 AiDescriptionLong=Provides AI (Artificial Intelligence) features in different parts of the application. Need external AI API.
 AI_API_KEY=Key for AI api
 AI_API_URL=Endpoint URL for AI api
-AI_API_SERVICE=Service to use for AI features
+AI_API_SERVICE=AI service to use
 AiSetup=AI module setup
 AiCustomPrompt=AI custom prompt
 AI_CONFIGURATIONS_PROMPT=Custom prompt
@@ -2557,6 +2557,10 @@ MainAuthenticationOidcLogoutRedirectUrlDesc=Dolibarr logout URL to authorize on 
 MainAuthenticationOidcLoginClaimName=Login claim
 MainAuthenticationOidcLoginClaimDesc=OpenID Connect claim matching the Dolibarr user login. If not set or empty, defaults to email
 BlackListWords=Black list of words
+BlackListWordsHelp=Words must be separated by a coma (",")
+BlackListWordsAIHelp=This is a list of words that will be completely removed from the result of any AI requests
+Pre-PromptHelp=This text will always be added before the text you enter to make an AI request
+Post-PromptHelp=This text will always be added after the text you enter to make an AI request
 AddBlackList=Add to black list
 FediverseSetup=Configuration of fediverse section
 ConfigImportSocialNetwork=Configuration of social networks compatible with Fediverse
